# daily_tech_podcast

./: .gitignore  README.md  soul_power_tech_news.xml  soul_power_tech_news.yaml
episodes/2025-07-07/: script.txt
episodes/2025-07-10/: script.txt
episodes/2025-07-11/: script.txt
episodes/2025-07-12/: script.txt
episodes/2025-07-13/: script.txt
episodes/2025-07-14/: script.txt
episodes/2025-07-15/: script.txt
episodes/2025-07-17/: script.txt
episodes/2025-07-23/: script.txt
episodes/2025-07-24/: script.txt
episodes/2025-07-25/: script.txt
episodes/2025-07-26/: script.txt
episodes/2025-07-27/: script.txt
episodes/2025-07-28/: script.txt
episodes/2025-07-29/: script.txt
episodes/2025-07-31/: script.txt
episodes/2025-08-01/: script.txt
episodes/2025-08-03/: script.txt
episodes/2025-08-05/: script.txt
episodes/2025-08-06/: script.txt
episodes/2025-08-07/: script.txt
episodes/2025-08-08/: script.txt
episodes/2025-08-09/: script.txt
episodes/2025-08-11/: script.txt
episodes/2025-08-12/: script.txt
episodes/2025-08-13/: script.txt
episodes/2025-08-14/: script.txt
episodes/2025-08-15/: script.txt
episodes/2025-08-16/: script.txt
episodes/2025-08-17/: script.txt
episodes/2025-08-18/: script.txt
episodes/2025-08-19/: script.txt
episodes/2025-08-20/: script.txt
episodes/2025-08-21/: script.txt
fastapi_service/: pyproject.toml
fastapi_service/src/: .env.example  config.py  gemini_generator.py  github_uploader.py  main.py  minimax_generator.py  rss_handler.py  test_upload.py  utils.py
generate_audio/: README.md
(+233 files in other folders)
